# OpenQR

./: .gitignore  OpenQR.sln
OpenQR/: Application.cpp  BMPImageIO.cpp  BMPImageIO.h  BMPImageIO.hpp  CMakeLists.txt  ClassDiagram.cd  DataDecoder.cpp  DataDecoder.h  DataEncoder.cpp  DataEncoder.h  Examples.cpp  Examples.h  FFTCore.cpp  FFTCore.h  IImageIO.h  IImageIO.hpp  IImageIn.h  IImageIn.hpp  IImageOut.h  IImageOut.hpp  ImageIO.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  OpenQR.vcxproj  OpenQR.vcxproj.filters  QRCode.cpp  QRCode.h  SupFunction.h  bmp.cpp  bmp.h  core.h  gf.hpp  poly.hpp  rs.hpp
